# GPR_Lab_Pro_V3

./: .gitignore  ARCHITECTURE.md  GPR_V11_Pyside.spec  PACKAGING.md  README.md  RELEASE_INSTRUCTIONS.txt  build_release.bat  build_release.ps1  install_deps.bat  pyproject.toml  qt.conf  release_launcher.bat  requirements.txt  run_app.bat  run_app.ps1
gpr_lab_pro/: __init__.py  app.py  application.py  models.py  signals.py
gpr_lab_pro/algorithms/: __init__.py  core.py  external.py
gpr_lab_pro/app/: __init__.py  __main__.py  application.py  context.py  main.py  operation_text.py  signals.py
gpr_lab_pro/app/controllers/: __init__.py  dataset_controller.py  display_controller.py  export_controller.py  pipeline_controller.py  pipeline_controller_v11.py  pipeline_controller_v12.py  project_controller.py  task_controller.py
gpr_lab_pro/domain/: __init__.py  enums.py
gpr_lab_pro/domain/models/: __init__.py  dataset.py  display.py  pipeline.py  project.py  (+1 more)
gpr_lab_pro/infrastructure/: __init__.py  online_map.py  settings.py  workers.py
gpr_lab_pro/io/: __init__.py  dat_loader.py  importer.py  project_store.py
gpr_lab_pro/plugins/: __init__.py  base.py  demo_inverse.py  loader.py
gpr_lab_pro/processing/: __init__.py  catalog.py  catalog_full.py  catalog_v11.py  engine.py  module_registry.py  module_registry_v11.py  pipeline.py  runtime.py
gpr_lab_pro/render/: __init__.py
gpr_lab_pro/ui/: __init__.py  main_window_v12.py  overview_quick_map.py
gpr_lab_pro/viewmodels/: __init__.py  display_vm.py  pipeline_vm.py  project_vm.py
tests/: test_v11_runtime.py
(+28 files in other folders)
