[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpr-v11-pyside"
version = "0.11.0"
description = "PySide6-based formal project for GPR post-processing software."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "PyWavelets>=1.4",
    "matplotlib>=3.7",
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
gpr-v11 = "gpr_lab_pro.app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["gpr_lab_pro*"]
